--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,19 +1,51 @@
+
 .App {
   text-align: center;
-}
+  background: rgb(36,181,227);
+  background: 
+    linear-gradient(
+      99deg, 
+      rgba(36,181,227,1) 
+      0%, 
+      rgba(9,214,252,0.4795051809786415) 
+      100%
+    ); 
+    
+  height: 100vh;
+  width: 100vw;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  height: 70px;
+  font-size: calc(10px + 2vmin);
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: auto;
+  height: 100vh;
+}
+
+.App-header h1 {
+  rotate: -90deg;
+}
+
+.App .main-content {
+  height: 95vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+}
+
+.calc-container {
+  height: 100%;
+  width: 450px;
+  background-color: 
+    rgba(255, 255, 255, 0.623)
+  ;
+  border-radius: 5%;
 }
