--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,13 @@
 
 .App {
   text-align: center;
-  background: rgb(36,181,227);
   background: 
-    linear-gradient(
-      99deg, 
-      rgba(36,181,227,1) 
-      0%, 
-      rgba(9,214,252,0.4795051809786415) 
-      100%
+  linear-gradient(
+    99deg, 
+    rgba(36,181,227,1) 
+    0%, 
+    rgba(9,214,252,0.4795051809786415) 
+    100%
     ); 
     
   height: 100vh;
@@ -19,33 +18,44 @@
   justify-content: center;
 }
 
+.App > .App-header, .main-content {
+  position: relative;
+  right: 6%;
+}
+
 .App-header {
-  font-size: calc(10px + 2vmin);
-  color: #ffffff;
+  font-size: 24px;
+  color: rgba(255, 255, 255, 0.895);
   display: flex;
   justify-content: center;
   align-items: center;
 
-  width: auto;
+  width: fit-content;
   height: 100vh;
 }
 
 .App-header h1 {
   rotate: -90deg;
+  width: fit-content;
+  height: fit-content;
 }
 
 .App .main-content {
-  height: 95vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: center;
 }
 
-.calc-container {
-  height: 100%;
-  width: 450px;
-  background-color: 
-    rgba(255, 255, 255, 0.623)
-  ;
-  border-radius: 5%;
+@media (max-width: 716px) {
+  .App-header {
+    font-size: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .App > .App-header, .main-content {
+    position: relative;
+    right: 0;
+  }
 }
