--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,17 +1,18 @@
 
 .App {
   text-align: center;
-  background: 
-  linear-gradient(
+  background: linear-gradient(
     99deg, 
     rgba(36,181,227,1) 
     0%, 
     rgba(9,214,252,0.4795051809786415) 
     100%
-    ); 
+  ); 
     
   height: 100vh;
   width: 100vw;
+
+  min-height: 685px;
 
   display: inline-flex;
   align-items: center;
@@ -31,7 +32,7 @@
   align-items: center;
 
   width: fit-content;
-  height: 100vh;
+  height: 100%;
 }
 
 .App-header h1 {
@@ -41,7 +42,7 @@
 }
 
 .App .main-content {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
