--- a/src/styles/Calculator.css
+++ b/src/styles/Calculator.css
@@ -4,6 +4,9 @@
   width: 450px;
   background-color: rgba(255, 255, 255, 0.623);
   border-radius: 6%;
+
+  display: grid;
+  grid-template-rows: 0.1fr 0.05fr 0.1fr 1fr;
 }
 
 @media (max-width: 470px) {
