--- a/src/styles/Pad.css
+++ b/src/styles/Pad.css
@@ -1,5 +1,8 @@
+
+/* Containers y Grids */
+
 .pad-container {
-    padding-top: 3%;
+    padding-top: 5%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -9,5 +12,47 @@
     width: 95%;
     height: 97%;
 
-    background-color: rgba(0, 0, 255, 0.185);
+    display: grid;
+    grid-template-columns: 0.25fr 0.25fr 0.25fr 0.25fr;
+    grid-template-rows: 0.25fr 0.25fr 0.25fr 0.25fr 0.25;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Botones del Pad */
+
+.pad-button,
+.pad-operator
+{
+    height: 75%;
+    width: 80%;
+    border: none;
+
+    border-radius: 20%;
+    box-shadow: 1px 1.5px 4px 2.2px #3232324e;
+
+    font-size: 200%;
+    color: white;
+}
+
+.pad-button {background-color: rgb(85, 167, 238)}
+.pad-operator {background-color: rgb(254, 189, 25)}
+.pad-equal {background-color: rgb(45, 220, 92)}
+.pad-clear {background-color: rgb(255, 119, 134)}
+
+.pad-button:hover,
+.pad-operator:hover
+{
+    height: 76%;
+    width: 81%;
+}
+
+.pad-button:active,
+.pad-operator:active
+{
+    filter: drop-shadow(1px 2px 2px #3232324e);
 }
