--- a/src/styles/Calculator.css
+++ b/src/styles/Calculator.css
@@ -2,6 +2,8 @@
 .calculator {
   height: 95%;
   width: 450px;
+  max-height: 650px;
+  
   background-color: rgba(255, 255, 255, 0.623);
   border-radius: 6%;
 
