--- a/src/styles/Calculator.css
+++ b/src/styles/Calculator.css
@@ -3,7 +3,9 @@
   height: 95%;
   width: 450px;
   max-height: 650px;
+  max-height: 650px;
   
+    position: relative;
   background-color: rgba(255, 255, 255, 0.623);
   border-radius: 6%;
 
